--- a/ppx_make.opam
+++ b/ppx_make.opam
@@ -9,12 +9,13 @@ homepage: "https://github.com/erebuxy/ppx_make"
 doc: "https://github.com/erebuxy/ppx_make"
 bug-reports: "https://github.com/erebuxy/ppx_make/issues"
 depends: [
-  "dune" {>= "2.0.0"}
+  "dune" {>= "2.7" & >= "2.7.0"}
   "ppxlib" {>= "0.10.0"}
   "ounit2" {with-test}
+  "odoc" {with-doc}
 ]
 build: [
-  ["dune" "subst"] {pinned}
+  ["dune" "subst"] {dev}
   [
     "dune"
     "build"
