--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,10 @@ name: CI Workflow
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -14,6 +15,7 @@ jobs:
         os:
           - ubuntu-latest
         ocaml-compiler:
+          - 4.04.x
           - 4.14.x
 
     runs-on: ${{ matrix.os }}
