--- a/ppx_make.opam
+++ b/ppx_make.opam
@@ -2,7 +2,7 @@
 opam-version: "2.0"
 version: "0.3.3"
 synopsis: "[@@deriving make]"
-description: "Ppxlib based [@@deriving] plugin to generate make functions"
+description: "[@@deriving] plugin to generate make functions"
 maintainer: ["Boning <me@boni.ng>"]
 authors: ["Boning <me@boni.ng>"]
 license: "MIT"
