--- a/ppx_make.opam
+++ b/ppx_make.opam
@@ -13,6 +13,7 @@ depends: [
   "dune" {>= "2.7"}
   "ppxlib" {>= "0.10.0"}
   "ounit2" {with-test}
+  "bisect_ppx" {with-test}
   "odoc" {with-doc}
 ]
 build: [
